fix css spacing

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,9 @@
 HashRouter {
     height: 100%;
     width: 100%;
+    overflow: scroll;
 }
+
 ul.navbar-main {
     list-style-type: none;
     margin: 0;
